[gd_scene load_steps=5 format=3 uid="uid://d1qdaaubr40oq"]

[ext_resource type="Script" uid="uid://cn5nba6ccpqkh" path="res://Scenes/Components/PuzzlePiece/PuzzlePiece.gd" id="1_t2gqn"]
[ext_resource type="Texture2D" uid="uid://d0hgnlc4lvvps" path="res://Assets/Images/icons/star_3.png" id="2_hek20"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8pe7f"]
size = Vector2(336.38, 308.67)

[sub_resource type="Curve" id="Curve_ee0qq"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0, -0.0159942), 0.0, 0.0, 0, 0, Vector2(0.504292, 0.976372), 0.0, 0.0, 0, 0, Vector2(0.976395, 0.0548891), 0.0, 0.0, 0, 0]
point_count = 3

[node name="PuzzlePiece" type="Node2D"]
script = ExtResource("1_t2gqn")
background_color = Color(0.219608, 0.4, 0.498039, 1)
single_piece_color_override = Color(0.219608, 0.4, 0.498039, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(148, 264)

[node name="BackgroundRect" type="ColorRect" parent="."]
z_index = 10
clip_contents = true
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.219608, 0.4, 0.498039, 1)

[node name="NumberLabel" type="Label" parent="."]
z_index = 11
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 42
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(149, 266)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.52588e-05, -0.5)
scale = Vector2(2.36637, 3.31422)
shape = SubResource("RectangleShape2D_8pe7f")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 12
texture = ExtResource("2_hek20")
one_shot = true
speed_scale = 1.75
explosiveness = 0.55
randomness = 0.19
fixed_fps = 60
draw_order = 1
emission_shape = 2
emission_sphere_radius = 42.0
gravity = Vector2(0, 2)
initial_velocity_max = 20.0
radial_accel_min = 100.0
radial_accel_max = 100.0
scale_amount_min = 0.02
scale_amount_max = 0.02
hue_variation_max = 0.48
hue_variation_curve = SubResource("Curve_ee0qq")

[connection signal="input_event" from="Area2D" to="." method="_input_event"]
